--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,8 @@ Build-Depends: cmake (>= 2.8.12~),
                libkf5windowsystem-dev (>= 5.11~),
                libotr5-dev (>= 4.0.0~),
                libsignon-qt5-dev (>= 8.55~),
-               libtelepathy-logger-qt-dev (>= 15.04),
-               libtelepathy-qt5-dev (>= 0.9.5),
+               libtelepathy-logger-qt-dev (>= 17.08~),
+               libtelepathy-qt5-dev (>= 0.9.7~),
                pkg-kde-tools (>> 0.15.15),
                qtbase5-dev (>= 5.4),
                qtdeclarative5-dev (>= 5.4),
